Small addition to our page content.

--- a/site/indexex.html
+++ b/site/indexex.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hello connections!</p>
+    <p>Hello connections! Have a great day.</p>
 </body>
 </html>
